crates/alef-backend-kotlin/tests/snapshots/jni_emitter_test__snapshot_jni_byte_array_return_bridge.snap
---
source: crates/alef-backend-kotlin/tests/jni_emitter_test.rs
expression: bridge_content
---
// Generated by alef. Do not edit by hand.

package dev.kreuzberg

object DemoBridge {
    init { System.loadLibrary("demo_jni") }

    // JNI external funs for client instance methods.
    external fun nativeDefaultClientSpeech(handle: Long, requestJson: String): ByteArray
    external fun nativeFreeDefaultClient(handle: Long)
}
