crates/alef-backend-kotlin/tests/snapshots/jni_emitter_test__snapshot_jni_byte_array_return_client.snap
---
source: crates/alef-backend-kotlin/tests/jni_emitter_test.rs
expression: client_content
---
// Generated by alef. Do not edit by hand.

package dev.kreuzberg

import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.withContext

/** JNI-backed wrapper holding a native `DefaultClient` handle. */
@Suppress("TooManyFunctions")
class DefaultClient internal constructor(internal val handle: Long) : AutoCloseable {
    companion object {
        private val MAPPER = com.fasterxml.jackson.databind.ObjectMapper()
            .registerModule(com.fasterxml.jackson.datatype.jdk8.Jdk8Module())
            .findAndRegisterModules()
            .setPropertyNamingStrategy(com.fasterxml.jackson.databind.PropertyNamingStrategies.SNAKE_CASE)
    }

    suspend fun speech(request: SpeechRequest): ByteArray {
        return withContext(Dispatchers.IO) { DemoBridge.nativeDefaultClientSpeech(handle, MAPPER.writeValueAsString(request)) }
    }

    override fun close() { DemoBridge.nativeFreeDefaultClient(handle) }
}
