crates/alef-backend-kotlin/tests/snapshots/jni_emitter_test__snapshot_jni_default_client_chat_complete.snap
---
source: crates/alef-backend-kotlin/tests/jni_emitter_test.rs
expression: content
---
// Generated by alef. Do not edit by hand.

package dev.kreuzberg

import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.withContext

/** JNI-backed wrapper holding a native `DefaultClient` handle. */
@Suppress("TooManyFunctions")
class DefaultClient internal constructor(internal val handle: Long) : AutoCloseable {
    companion object {
        private val MAPPER = com.fasterxml.jackson.databind.ObjectMapper()
            .registerModule(com.fasterxml.jackson.datatype.jdk8.Jdk8Module())
            .findAndRegisterModules()
            .setPropertyNamingStrategy(com.fasterxml.jackson.databind.PropertyNamingStrategies.SNAKE_CASE)
    }

    suspend fun chat(request: ChatCompletionRequest): ChatCompletionResponse {
        return withContext(Dispatchers.IO) {
            val responseJson = DemoBridge.nativeDefaultClientChat(handle, MAPPER.writeValueAsString(request))
            MAPPER.readValue(responseJson, ChatCompletionResponse::class.java)
        }
    }

    suspend fun embeddings(request: EmbeddingsRequest): EmbeddingsResponse {
        return withContext(Dispatchers.IO) {
            val responseJson = DemoBridge.nativeDefaultClientEmbeddings(handle, MAPPER.writeValueAsString(request))
            MAPPER.readValue(responseJson, EmbeddingsResponse::class.java)
        }
    }

    override fun close() { DemoBridge.nativeFreeDefaultClient(handle) }
}
